frontend: fix profile page icons size on smaller screens. add notice about no posts under profile page tabs

--- a/styles/profilePage.module.scss
+++ b/styles/profilePage.module.scss
@@ -223,3 +223,8 @@
         }
     }
 }
+
+.icon {
+    min-width: 32px;
+    min-height: 32px;
+}
